cloudformation/master-new-network.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Network bandwidth test across VPCs using iperf3 and transit gateways

Parameters:
  pInstanceType:
    Description: WebServer EC2 instance type. m5n = up to 25 GBPS, m5 = up to 10 GPBS, t3 = low to moderate network performance.
    Type: String
    Default: m5n.large
    ConstraintDescription: must be a valid EC2 instance type.

  pSSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  pS3BucketName:
    Description: Name of bucket for logging destination
    Type: String
    Default: "iperf-logs-destination-1"

  pKeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: prudkey

  pGitRepoURL:
    Description: git repo containing scripts
    Type: String
    Default: https://github.com/CYarros10/transit-gateway-bandwidth-test.git

  pFullTest:
    Description: If True - deploy 2 pairs of iperf client-server and 2 pairs of client-public EC2 instances (8 EC2 instances) to max out TGW bandwidth. If False - only 1 pair of client-server and 1 pair of client-public (4 ec2 instances)
    Type: String
    Default: true
    AllowedValues:
      - true
      - false

  pCronExpression:
    Description: cron  to run the iperf command at a specific interval. default is once every minute. visit https://crontab.guru/ for more details.
    Type: String
    Default: '* * * * *'

Conditions:
  cFullTest: !Equals [ !Ref pFullTest, true]


Mappings:

  mNetworkConfig:
    ServerVPC:
      CIDR: "10.0.0.0/16"
    ServerPublicSubnetA:
      CIDR: "10.0.1.0/24"
    ClientVPC:
      CIDR: "10.1.0.0/16"
    ClientPublicSubnetA:
      CIDR: "10.1.1.0/24"
    PublicVPC:
      CIDR: "10.2.0.0/16"
    PublicPublicSubnetA:
      CIDR: "10.2.1.0/24"


  mAWSInstanceType2Arch:
    t3.nano:
      Arch: HVM64
    t3.micro:
      Arch: HVM64
    t3.small:
      Arch: HVM64
    t3.medium:
      Arch: HVM64
    t3.large:
      Arch: HVM64
    t3.xlarge:
      Arch: HVM64
    t3.2xlarge:
      Arch: HVM64
    m5.large:
      Arch: HVM64
    m5n.large:
      Arch: HVM64

  mAWSRegionArch2AMI:
    us-east-1:
      HVM64: ami-0c322300a1dd5dc79 # RedHat Linux 8

  mAZRegions:
      us-east-1:
        AZs: ["a", "b"]

Resources:

#----------------------------------------------------------------------------------------------------------
# VPC
#----------------------------------------------------------------------------------------------------------

# -------
# Server
# -------

  rServerVPC:
    Type: "AWS::EC2::VPC"
    Properties:
      EnableDnsHostnames: true
      CidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ServerVPC"
          - "CIDR" # CIDR BLOCK MUST BE DIFFERENT THAN CLIENT VPC
      InstanceTenancy: "default"
      Tags:
      - Key: Name
        Value: vpc-server

# -------
# Client
# -------

  rClientVPC:
    Type: "AWS::EC2::VPC"
    Properties:
        CidrBlock:
          Fn::FindInMap:
            - "mNetworkConfig"
            - "ClientVPC"
            - "CIDR" # CIDR BLOCK MUST BE DIFFERENT THAN SERVER VPC
        InstanceTenancy: "default"
        Tags:
        - Key: Name
          Value: vpc-client

# -------
# Public
# -------

  rPublicVPC:
    Type: "AWS::EC2::VPC"
    Properties:
        CidrBlock:
          Fn::FindInMap:
            - "mNetworkConfig"
            - "PublicVPC"
            - "CIDR"
        InstanceTenancy: "default"
        Tags:
        - Key: Name
          Value: vpc-public


#----------------------------------------------------------------------------------------------------------
# VPC - Public Subnet A
#----------------------------------------------------------------------------------------------------------

# -------
# Server
# -------

  rServerPublicSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: rServerAttachInternetGateway
    Properties:
      AvailabilityZone:
        # Goes through the mAZRegions mapping to programmatically grab az
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "mAZRegions", !Ref "AWS::Region", "AZs" ] ]
      VpcId: !Ref rServerVPC
      CidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ServerPublicSubnetA"
          - "CIDR"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: ServerPublicSubnetA

# -------
# Client
# -------

  rClientPublicSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: rClientAttachInternetGateway
    Properties:
      AvailabilityZone:
        # Goes through the mAZRegions mapping to programmatically grab az
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "mAZRegions", !Ref "AWS::Region", "AZs" ] ]
      VpcId: !Ref rClientVPC
      CidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ClientPublicSubnetA"
          - "CIDR"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: ClientPublicSubnetA

# -------
# Public
# -------

  rPublicPublicSubnetA:
    Type: AWS::EC2::Subnet
    DependsOn: rPublicAttachInternetGateway
    Properties:
      AvailabilityZone:
        # Goes through the mAZRegions mapping to programmatically grab az
        Fn::Sub:
          - "${AWS::Region}${AZ}"
          - AZ: !Select [ 0, !FindInMap [ "mAZRegions", !Ref "AWS::Region", "AZs" ] ]
      VpcId: !Ref rPublicVPC
      CidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "PublicPublicSubnetA"
          - "CIDR"
      MapPublicIpOnLaunch: True
      Tags:
        - Key: Name
          Value: PublicPublicSubnetA

#----------------------------------------------------------------------------------------------------------
# VPC - Internet Gateway and Public Routes
#----------------------------------------------------------------------------------------------------------

# -------
# Server
# -------

  rServerVPCIGW:
    Type: AWS::EC2::InternetGateway

  rServerAttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref rServerVPC
      InternetGatewayId: !Ref rServerVPCIGW

  rServerPublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn:
      - rServerAttachInternetGateway
    Properties:
      VpcId: !Ref rServerVPC
      Tags:
        - Key: Name
          Value: Server VPC Public Route Table

  rServerPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rServerPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rServerVPCIGW

  rServerToClientRouteViaTGW:
    Type: AWS::EC2::Route
    DependsOn: [rTransitGatewayClientVPCAttachment, rTransitGatewayServerVPCAttachment]
    Properties:
      RouteTableId: !Ref rServerPublicRouteTable
      TransitGatewayId: !Ref rTransitGateway
      DestinationCidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ClientVPC"
          - "CIDR"

  rServerPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - rServerAttachInternetGateway
    Properties:
      SubnetId: !Ref rServerPublicSubnetA
      RouteTableId: !Ref rServerPublicRouteTable

# -------
# Client
# -------

  rClientVPCIGW:
    Type: AWS::EC2::InternetGateway

  rClientAttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref rClientVPC
      InternetGatewayId: !Ref rClientVPCIGW

  rClientPublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn:
      - rClientAttachInternetGateway
    Properties:
      VpcId: !Ref rClientVPC
      Tags:
        - Key: Name
          Value: Client VPC Public Route Table

  rClientPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rClientPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rClientVPCIGW

  rClientToServerRouteViaTGW:
    Type: AWS::EC2::Route
    DependsOn: [rTransitGatewayClientVPCAttachment, rTransitGatewayServerVPCAttachment]
    Properties:
      RouteTableId: !Ref rClientPublicRouteTable
      TransitGatewayId: !Ref rTransitGateway
      DestinationCidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ServerVPC"
          - "CIDR"

  rClientPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - rClientAttachInternetGateway
    Properties:
      SubnetId: !Ref rClientPublicSubnetA
      RouteTableId: !Ref rClientPublicRouteTable


# -------
# Public
# -------

  rPublicVPCIGW:
    Type: AWS::EC2::InternetGateway

  rPublicAttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref rPublicVPC
      InternetGatewayId: !Ref rPublicVPCIGW

  rPublicPublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn:
      - rPublicAttachInternetGateway
    Properties:
      VpcId: !Ref rPublicVPC
      Tags:
        - Key: Name
          Value: Public VPC Public Route Table

  rPublicPublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref rPublicPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref rPublicVPCIGW

  rPublicPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - rPublicAttachInternetGateway
    Properties:
      SubnetId: !Ref rPublicPublicSubnetA
      RouteTableId: !Ref rPublicPublicRouteTable

#----------------------------------------------------------------------------------------------------------
# EC2
#----------------------------------------------------------------------------------------------------------

# -------
# Server
# -------

  rEC2iPerfServer1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rServerPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfServerSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "mkdir /iperf"
              - "\n"
              - "echo 'installing python3 pip... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "echo 'installing aws-cli... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "pip3 install awscli --upgrade"
              - "\n"
              - "echo 'installing iperf3... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              - "echo 'starting iperf3 server... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "iperf3 -s"
      Tags:
        - Key: Name
          Value: iperf-server-1


  rEC2iPerfServer2:
    Type: AWS::EC2::Instance
    Condition: cFullTest
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rServerPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfServerSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "pip3 install awscli --upgrade "
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              - "iperf3 -s"
      Tags:
        - Key: Name
          Value: iperf-server-2


  riPerfServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - rServerVPC
      - rServerPublicSubnetA
    Properties:
      VpcId: !Ref rServerVPC
      GroupDescription: Enable
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp:
          Ref: pSSHLocation
      - IpProtocol: tcp
        FromPort: 5201
        ToPort: 5201
        CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: iperf-server-sg

# -------
# Client
# -------

  rEC2iPerfClientToServer1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rClientPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfClientSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "mkdir /iperf"
              - "\n"
              - "echo 'installing python3 pip... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "echo 'installing aws-cli... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "pip3 install awscli --upgrade"
              - "\n"
              - "echo 'installing iperf3... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              - "echo 'installing git... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              -  "sudo yum install git -y"
              - "\n"
              - "echo 'installing jq... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "sudo yum install jq -y"
              - "\n"
              - "cd /iperf"
              - "\n"
              - "echo 'cloning repo... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "git clone "
              - !Ref pGitRepoURL
              - "\n"
              - "chmod -R 777 /iperf"
              - "\n"
              - "cd transit-gateway-bandwidth-test/"
              - "\n"
              - "chmod 777 scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "echo 'updating dynamic information... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "sed -i -r 's/<insert-private-ip-here>/"
              - !GetAtt rEC2iPerfServer1.PrivateIp
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-s3-bucket-here>/"
              - !Ref pS3BucketName
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "echo 'placing crontab... \n' &>> /iperf/userdata-log.txt"
              - "\n"
              - "echo '"
              - !Ref pCronExpression
              - " /iperf/transit-gateway-bandwidth-test/scripts/iperf3-log-to-s3.sh' >> /var/spool/cron/ec2-user"
              - "\n"
      Tags:
        - Key: Name
          Value: iperf-client-to-server-1

  rEC2iPerfClientToServer2:
    Type: AWS::EC2::Instance
    Condition: cFullTest
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rClientPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfClientSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "pip3 install awscli --upgrade "
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              -  "sudo yum install git -y"
              - "\n"
              - "sudo yum install jq -y"
              - "\n"
              - "mkdir /iperf"
              - "\n"
              - "cd /iperf"
              - "\n"
              - "git clone "
              - !Ref pGitRepoURL
              - "\n"
              - "chmod -R 777 /iperf"
              - "\n"
              - "cd transit-gateway-bandwidth-test/"
              - "\n"
              - "chmod 777 scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-private-ip-here>/"
              - !GetAtt rEC2iPerfServer2.PrivateIp
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-s3-bucket-here>/"
              - !Ref pS3BucketName
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "echo '"
              - !Ref pCronExpression
              - " /iperf/transit-gateway-bandwidth-test/scripts/iperf3-log-to-s3.sh' >> /var/spool/cron/ec2-user"
              - "\n"

      Tags:
        - Key: Name
          Value: iperf-client-to-server-2


  rEC2iPerfClientToPublic1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rClientPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfClientSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "pip3 install awscli --upgrade "
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              -  "sudo yum install git -y"
              - "\n"
              - "sudo yum install jq -y"
              - "\n"
              - "mkdir /iperf"
              - "\n"
              - "cd /iperf"
              - "\n"
              - "git clone "
              - !Ref pGitRepoURL
              - "\n"
              - "chmod -R 777 /iperf"
              - "\n"
              - "cd transit-gateway-bandwidth-test/"
              - "\n"
              - "chmod 777 scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-private-ip-here>/"
              - !GetAtt rEC2iPerfPublic1.PrivateIp
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-s3-bucket-here>/"
              - !Ref pS3BucketName
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "echo '"
              - !Ref pCronExpression
              - " /iperf/transit-gateway-bandwidth-test/scripts/iperf3-log-to-s3.sh' >> /var/spool/cron/ec2-user"
              - "\n"

      Tags:
        - Key: Name
          Value: iperf-client-to-public-1


  rEC2iPerfClientToPublic2:
    Type: AWS::EC2::Instance
    Condition: cFullTest
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rClientPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfClientSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "sudo pip3 install awscli --upgrade "
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              - "sudo yum install git -y"
              - "\n"
              - "sudo yum install jq -y"
              - "\n"
              - "mkdir /iperf"
              - "\n"
              - "cd /iperf"
              - "\n"
              - "git clone "
              - !Ref pGitRepoURL
              - "\n"
              - "chmod -R 777 /iperf"
              - "\n"
              - "cd transit-gateway-bandwidth-test/"
              - "\n"
              - "chmod 777 scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-private-ip-here>/"
              - !GetAtt rEC2iPerfPublic2.PrivateIp
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "sed -i -r 's/<insert-s3-bucket-here>/"
              - !Ref pS3BucketName
              - "/g' scripts/iperf3-log-to-s3.sh"
              - "\n"
              - "echo '"
              - !Ref pCronExpression
              - " /iperf/transit-gateway-bandwidth-test/scripts/iperf3-log-to-s3.sh' >> /var/spool/cron/ec2-user"
              - "\n"

      Tags:
        - Key: Name
          Value: iperf-client-to-public-2

  riPerfClientSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - rClientPublicSubnetA
    Properties:
      VpcId: !Ref rClientVPC
      GroupDescription: Enable
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp:
          Ref: pSSHLocation
      - IpProtocol: tcp
        FromPort: 5201
        ToPort: 5201
        CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: iperf-client-sg

  rEC2IamInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref rClientEC2RoleS3

  rClientEC2RoleS3:
    Type: "AWS::IAM::Role"
    Properties:
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole

#---------------------
# Public
#---------------------

  rEC2iPerfPublic1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rPublicPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfPublicSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "pip3 install awscli --upgrade "
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              - "iperf3 -s"
      Tags:
        - Key: Name
          Value: iperf-public-1

  rEC2iPerfPublic2:
    Type: AWS::EC2::Instance
    Condition: cFullTest
    Properties:
      InstanceType:
        Ref: pInstanceType
      IamInstanceProfile: !Ref rEC2IamInstanceProfile
      SubnetId: !Ref rPublicPublicSubnetA
      SecurityGroupIds:
        - Ref: riPerfPublicSecurityGroup
      KeyName:
        Ref: pKeyName
      ImageId:
        Fn::FindInMap:
        - mAWSRegionArch2AMI
        - Ref: AWS::Region
        - Fn::FindInMap:
          - mAWSInstanceType2Arch
          - Ref: pInstanceType
          - Arch
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            -
              -  "#!/bin/bash -xe"
              - "\n"
              - "sudo dnf install python3-pip -y"
              - "\n"
              - "pip3 install awscli --upgrade "
              - "\n"
              - "sudo yum install iperf3 -y"
              - "\n"
              - "iperf3 -s"
      Tags:
        - Key: Name
          Value: iperf-public-2

  riPerfPublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - rPublicVPC
      - rPublicPublicSubnetA
    Properties:
      VpcId: !Ref rPublicVPC
      GroupDescription: Enable
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp:
          Ref: pSSHLocation
      - IpProtocol: tcp
        FromPort: 5201
        ToPort: 5201
        CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: iperf-public-sg

#----------------------------------------------------------------------------------------------------------
# Transit Gateway
#----------------------------------------------------------------------------------------------------------

  rTransitGateway:
    Type: AWS::EC2::TransitGateway
    Properties:
      AutoAcceptSharedAttachments: enable
      Description: TransitGateway for iperf test
      DnsSupport: enable
      Tags:
        - Key: Name
          Value: iperf tgw

  rTransitGatewayServerVPCAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - !Ref rServerPublicSubnetA
      TransitGatewayId: !Ref rTransitGateway
      VpcId: !Ref rServerVPC
      Tags:
        - Key: Name
          Value: iperf tgw server attachment

  rTransitGatewayClientVPCAttachment:
    Type: AWS::EC2::TransitGatewayAttachment
    Properties:
      SubnetIds:
        - !Ref rClientPublicSubnetA
      TransitGatewayId: !Ref rTransitGateway
      VpcId: !Ref rClientVPC
      Tags:
        - Key: Name
          Value: iperf tgw client attachment

  rTransitGatewayRouteTable:
    Type: AWS::EC2::TransitGatewayRouteTable
    Properties:
      TransitGatewayId: !Ref rTransitGateway
      Tags:
        - Key: Name
          Value: iperf tgw route table

  rTransitGatewayServerRoute:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      DestinationCidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ServerPublicSubnetA"
          - "CIDR"
      TransitGatewayAttachmentId: !Ref rTransitGatewayServerVPCAttachment
      TransitGatewayRouteTableId: !Ref rTransitGatewayRouteTable

  rTransitGatewayClientRoute:
    Type: AWS::EC2::TransitGatewayRoute
    Properties:
      DestinationCidrBlock:
        Fn::FindInMap:
          - "mNetworkConfig"
          - "ClientPublicSubnetA"
          - "CIDR"
      TransitGatewayAttachmentId: !Ref rTransitGatewayClientVPCAttachment
      TransitGatewayRouteTableId: !Ref rTransitGatewayRouteTable

#----------------------------------------------------------------------------------------------------------
# S3
#----------------------------------------------------------------------------------------------------------

  rS3iPerfLogsDestination:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref pS3BucketName


Outputs:


# -------
# VPC
# -------
  oServerVPCID:
    Description: server vpc id
    Value: !Ref rServerVPC

  oClientVPCID:
    Description: client vpc id
    Value: !Ref rClientVPC

  oPublicVPCID:
    Description: public vpc id
    Value: !Ref rPublicVPC


# -------
# Subnet
# -------

  oServerPublicSubnetA:
    Description: server vpc public subnet A
    Value: !Ref rServerPublicSubnetA

  oClientPublicSubnetA:
    Description: client vpc public subnet A
    Value: !Ref rClientPublicSubnetA

  oPublicPublicSubnetA:
    Description: public vpc public subnet A
    Value: !Ref rPublicPublicSubnetA

# -------
# Server
# -------
  oServer1PublicIP:
    Description: Public IP address of the newly created EC2 instance - iperf server 1
    Value:
      Fn::GetAtt:
      - rEC2iPerfServer1
      - PublicIp
  oServer1PrivateIP:
    Description: Private IP address of the newly created EC2 instance - iperf server 1
    Value:
      Fn::GetAtt:
      - rEC2iPerfServer1
      - PrivateIp

# -------
# Client
# -------

  oClientToServer1PublicIP:
    Description: Public IP address of the newly created EC2 instance - iperf client to server
    Value:
      Fn::GetAtt:
      - rEC2iPerfClientToServer1
      - PublicIp

  oClientToPublic1PublicIP:
    Description: Public IP address of the newly created EC2 instance - iperf client to public
    Value:
      Fn::GetAtt:
      - rEC2iPerfClientToPublic1
      - PublicIp

# -------
# Public
# -------

  oEC2iPerfPublic1PublicIP:
    Description: Public IP address of the newly created EC2 instance - iperf Public 1
    Value:
      Fn::GetAtt:
      - rEC2iPerfPublic1
      - PublicIp

# --------------
# Transit Gateway
# --------------
  oTransitGatewayID:
    Description: transit gateway attachment ID. use this to filter metrics in cloudwatch.
    Value: !Ref rTransitGateway
